# OCR-Project

./: .env  .env.example  .gitignore  README.md  TODO.md  complete_ocr_test.py  config.yaml  full_system_test.py  img3_ocr_results.txt  import_test.py  main.py  ocr_test_results_img3.json  pipeline_debug_test.py  pipeline_test.py  pipeline_test_1_to_14.py  pipeline_tester.py  pyproject.toml  requirements.txt  run_all_tests.py  setup.py  setup_and_test.py  setup_project.py  setup_report.json  test.py  test_all_engines.py  test_engine_coordination_pipeline.py  test_full_integration_pipeline.py  test_img3_tesseract_easyocr.py  test_ocr_engines.py  test_pipeline.py  test_postprocessing_pipeline.py  test_preprocessing.py  test_preprocessing_pipeline.py
config/: development.yaml
configs/: preprocessing_config.yaml  trocr_config.yaml
data/configs/: ocr_config.yaml  postprocessing_config.yaml  preprocessing_config.yaml  text_detection.yaml  trocr_config.yaml  working_config.yaml
data/models/craft/: craft_mlt_25k.pth
debug/enhanced_pipeline_test/: 02_config_info.json  04_quality_analysis.json  06_text_regions.json  07a_tesseract_details.json  07a_tesseract_text.txt  07b_easyocr_details.json  07b_easyocr_text.txt  07c_paddleocr_details.json  07c_paddleocr_text.txt  lines_easyocr.txt  lines_paddleocr.txt  lines_tesseract.txt
examples/: __init__.py  advanced_usage.py  basic_usage.py  batch_processing.py  step4_usage_examples.py  test_mixed_text.py
preprocessed_and_paddleocr/: paddleocr_raw_text.txt  processing_metadata.json
preprocessed_and_paddleocr_img3/: paddleocr_raw_text.txt  processing_metadata.json
requirements/: base.txt  dev.txt  engines.txt  test.txt
results/: 01_simple_ocr.txt  02_multi_engine_ocr.txt  basic_options_result.txt  detailed_result.txt  easyocr_result.txt  language_options_result.txt  paddleocr_result.txt  simple_ocr_result.txt
scripts/: benchmark.py  check_step4_dependencies.py  complete_step4_test.py  run_step4_tests.py  setup.py  setup.sh  test_step4_integration.py
src/: __init__.py  batch_processor.py  ocr_pipeline.py  ocr_processor.py  types.py  utils.py
src/advanced_ocr/: __init__.py  config.py  core.py  exceptions.py  ocr_pipeline.py  pipeline.py  results.py  types.py
src/advanced_ocr/core/: __init__.py  base_engine.py  engine_manager.py
src/advanced_ocr/engines/: __init__.py  base_engine.py  easyocr.py  easyocr_engine.py  engine_coordinator.py  paddleocr.py  paddleocr_engine.py  tesseract.py  tesseract_engine.py  trocr.py  trocr_engine.py
src/advanced_ocr/models/: classification.py  craft_utils.py  enhancement.py  text_detection.py
src/advanced_ocr/postprocessing/: __init__.py  confidence_analyzer.py  layout_reconstructor.py  result_fusion.py  text_processor.py
src/advanced_ocr/preprocessing/: __init__.py  content_classifier.py  image_enhancer.py  image_processor.py  quality_analyzer.py  text_detector.py
src/advanced_ocr/resources/: default.yaml  engines.yaml
src/advanced_ocr/utils/: __init__.py  config.py  image_utils.py  images.py  logger.py  logging.py  model_utils.py  text_utils.py
src/api/: enhanced_main.py  main.py  minimal_ocr_api.py  simple_ocr_api.py
src/core/: __init__.py  base_engine.py  engine_manager.py  enhanced_engine_manager.py  ocr_engine.py  ocr_processor.py
src/engines/: __init__.py  easyocr_engine.py  paddle_engine.py  paddleocr_engine.py  tesseract_engine.py  trocr_engine.py
src/models/: craft_utils.py
src/postprocessing/: __init__.py  confidence_filter.py  document_processor.py  export_manager.py  layout_analyzer.py  postprocessing_pipeline.py  quality_validator.py  result_formatter.py  structure_extractor.py  text_corrector.py
src/preprocessing/: __init__.py  adaptive_processor.py  image_enhancer.py  optimized_preprocessing.py  quality_analyzer.py  skew_corrector.py  text_detector.py
src/utils/: __init__.py  config.py  image_utils.py  logger.py  text_utils.py
test_output/: test_report.txt  test_results.json
tests/: module_test_script.py  pipeline_test_1_to_14.py  preprocessing_pipeline_test.py  test_01_image_loading.py  test_02_config.py  test_03_logger.py  test_04_image_utils.py  test_05_quality_analyzer.py  test_06_image_enhancer.py  test_07_text_detector.py  test_08_base_engine.py  test_09_tesseract_engine.py  test_10_easyocr_engine.py  test_11_paddleocr_engine.py  test_12_trocr_engine.py  test_13_engine_manager.py  test_14_multi_engine_processing.py  test_adaptive_processor.py  test_all_engines_img1.py  test_config.py  test_constructor.py  test_logger.py  test_paddle_check.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_pipeline_real.py  test_preprocessing_to_paddleocr.py  test_preprocessing_to_trocr.py  test_tesseract_direct.py
