[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-ocr-system"
version = "1.0.0"  # Fixed: Using static version instead of dynamic
description = "Advanced OCR library with multiple engines and smart preprocessing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ocr", "text-recognition", "computer-vision", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: Linguistic",
]

# Core dependencies
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.6.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "scikit-image>=0.21.0",
    "python-Levenshtein>=0.21.0",
    "textdistance>=4.6.0",
    "tqdm>=4.66.0",
]

# Optional engine dependencies
[project.optional-dependencies]
tesseract = ["pytesseract>=0.3.10"]

easyocr = ["easyocr>=1.7.0"]

paddleocr = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0"
]

trocr = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
]

# Fixed: all-engines now lists dependencies directly
all-engines = [
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
]

# Development dependencies
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

# Testing dependencies  
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/advanced-ocr-system"
Repository = "https://github.com/yourusername/advanced-ocr-system"
"Bug Tracker" = "https://github.com/yourusername/advanced-ocr-system/issues"

# Package configuration
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"advanced_ocr.resources" = ["*.yaml", "*.yml"]

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Changed: Too strict for this project
mypy_path = "src"
packages = ["advanced_ocr"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "paddle.*", 
    "paddleocr.*",
    "easyocr.*",
    "pytesseract.*",
    "transformers.*",
    "torch.*",
    "torchvision.*",
    "PIL.*",
    "skimage.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=advanced_ocr", 
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]